Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contacts_visit_Weightage_Plumbers__c.field-meta.xml
<CustomField>
    <fullName>Contacts_visit_Weightage_Plumbers__c</fullName>
    <label>Contacts visit Weightage ( Plumbers)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>