Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Create_Tourplan__c.field-meta.xml
<CustomField>
    <fullName>Create_Tourplan__c</fullName>
    <formula>HYPERLINK(&apos;/apex/AP_TOURPLAN_CALENDAR?id=&apos;+ Id , &apos;Create Tourplan&apos;,&apos;_self&apos;)</formula>
    <label>Create Tourplan</label>
    <type>Text</type>
</CustomField>