Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Customer_Visits__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visits__c</fullName>
    <label>Customer Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>