Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Dealer_club_Actual_column__c.field-meta.xml
<CustomField>
    <fullName>Dealer_club_Actual_column__c</fullName>
    <label>Dealer club Actual column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>