Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Dealer_club_ACVD_column__c.field-meta.xml
<CustomField>
    <fullName>Dealer_club_ACVD_column__c</fullName>
    <formula>Dealer_club_Actual_column__c / Dealer_club_target_column__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer club %ACVD column</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>