Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Dealer_Club_Count__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Club_Count__c</fullName>
    <label>Dealer Club Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>