Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Dealer_club_Score_column__c.field-meta.xml
<CustomField>
    <fullName>Dealer_club_Score_column__c</fullName>
    <formula>Dealer_club_Weightage_column__c *( Dealer_club_ACVD_column__c /100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer club Score column</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>