Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Dealer_club_target_column__c.field-meta.xml
<CustomField>
    <fullName>Dealer_club_target_column__c</fullName>
    <description>dummy created</description>
    <label>Dealer club target column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>