Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Dealer_projectVisit_Actual__c.field-meta.xml
<CustomField>
    <fullName>Dealer_projectVisit_Actual__c</fullName>
    <label>Dealer projectVisit Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>