Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Dealers_Meet__c.field-meta.xml
<CustomField>
    <fullName>Dealers_Meet__c</fullName>
    <label>Dealers Meets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>