Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/DOC_CODE__c.field-meta.xml
<CustomField>
    <fullName>DOC_CODE__c</fullName>
    <formula>&apos;APPL/MKT/&apos;+ Vertical_Symbol__c+&apos;/&apos;+ Left(Target_User__r.FirstName ,1)+Left( Target_User__r.LastName ,1)+&apos;-&apos;+ Payment_Number__c</formula>
    <label>DOC CODE</label>
    <type>Text</type>
</CustomField>