Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/DP_Activation_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>DP_Activation_ACHVD__c</fullName>
    <formula>DP_Activation_Actual__c /  DP_Activation_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DP Activation ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>