Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/DP_Activation_Score__c.field-meta.xml
<CustomField>
    <fullName>DP_Activation_Score__c</fullName>
    <formula>DP_Activation_Weightage__c * (  DP_Activation_ACHVD__c / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DP Activation Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>