Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/DP_Activation_Target__c.field-meta.xml
<CustomField>
    <fullName>DP_Activation_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DP Activation Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>