Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/DP_Activation_Weightage__c.field-meta.xml
<CustomField>
    <fullName>DP_Activation_Weightage__c</fullName>
    <label>DP Activation Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>