Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Emp_Code__c.field-meta.xml
<CustomField>
    <fullName>Emp_Code__c</fullName>
    <formula>Target_User__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emp Code</label>
    <type>Text</type>
</CustomField>