Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Ex_Station_Actual__c.field-meta.xml
<CustomField>
    <fullName>Ex_Station_Actual__c</fullName>
    <label>Ex-Station(Actual)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>