Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Ex_Station_Daily_Calls__c.field-meta.xml
<CustomField>
    <fullName>Ex_Station_Daily_Calls__c</fullName>
    <label>Ex-Station : Daily Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>