Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <label>Exhibition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>