Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Exhibition_Actual__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Actual__c</fullName>
    <label>Exhibition (Actual)</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Activities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Othet_Activities__c</field>
        <operation>equals</operation>
        <value>Promotional Activity</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Promotion_Type__c</field>
        <operation>equals</operation>
        <value>Exhibition / Agri Fairs, Exhibition / Construction Fairs, Exhibition</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>