Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Exhibitions_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Exhibitions_ACHVD__c</fullName>
    <formula>if(Exhibition_Actual__c &gt; 0 &amp;&amp; Exhibition__c &gt; 0, Exhibition_Actual__c  /  Exhibition__c, 0)</formula>
    <label>Exhibitions % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>