Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Exhibitions_Score__c.field-meta.xml
<CustomField>
    <fullName>Exhibitions_Score__c</fullName>
    <formula>Exhibitions_Weightage__c  * ( Exhibitions_ACHVD__c /100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibitions - Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>