Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Exhibitions_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Exhibitions_Weightage__c</fullName>
    <label>Exhibitions - Weightage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>