Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Farmers_Panchayat_Head_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Farmers_Panchayat_Head_Weightage__c</fullName>
    <label>Farmers / Panchayat Head Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>