Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/GI_MS_Dealer_Distributor__c.field-meta.xml
<CustomField>
    <fullName>GI_MS_Dealer_Distributor__c</fullName>
    <label>GI/MS Dealer/Distributor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>