Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Group_Activity__c.field-meta.xml
<CustomField>
    <fullName>Group_Activity__c</fullName>
    <label>Group Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>