Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Head_Quarter_Daily_Calls__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarter_Daily_Calls__c</fullName>
    <label>Head Quarter : Daily Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>