Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Head_Quarter_Metro_Actual__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarter_Metro_Actual__c</fullName>
    <label>Head Quarter - Metro(Actual)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>