Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/HEAD_QUARTER_METRO_Daily_Calls__c.field-meta.xml
<CustomField>
    <fullName>HEAD_QUARTER_METRO_Daily_Calls__c</fullName>
    <label>Head Quarter - Metro : Daily Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>