Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/HEAD_QUARTER_METRO_No_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>HEAD_QUARTER_METRO_No_Of_Days__c</fullName>
    <label>Head Quarter - Metro : No. Of Days</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>