Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Head_Quarter_State_Capital_No_of_days__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarter_State_Capital_No_of_days__c</fullName>
    <label>Head Quarter-State Capital : No. of days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>