Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Influencer_BrandingVisit_Actual__c.field-meta.xml
<CustomField>
    <fullName>Influencer_BrandingVisit_Actual__c</fullName>
    <label>Influencer BrandingVisit Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>