Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Influencer_visit_actual_column__c.field-meta.xml
<CustomField>
    <fullName>Influencer_visit_actual_column__c</fullName>
    <label>Influencer visit actual column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>