Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Influencer_visit_column_ACVD__c.field-meta.xml
<CustomField>
    <fullName>Influencer_visit_column_ACVD__c</fullName>
    <formula>Influencer_visit_actual_column__c / Influencer_visit_Target_column__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influencer visit column % ACVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>