Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Influencer_visit_column_Score__c.field-meta.xml
<CustomField>
    <fullName>Influencer_visit_column_Score__c</fullName>
    <formula>Influencer_visit_column_Weightage_core__c *( Influencer_visit_column_ACVD__c/100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influencer visit column Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>