Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Influencer_visit_column_Weightage_core__c.field-meta.xml
<CustomField>
    <fullName>Influencer_visit_column_Weightage_core__c</fullName>
    <label>Influencer visit column Weightage_core</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>