Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/InShop_Mechanic_Meet__c.field-meta.xml
<CustomField>
    <fullName>InShop_Mechanic_Meet__c</fullName>
    <label>Inshop Mechanic Meets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>