Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/InSHOP_Plumber_meet__c.field-meta.xml
<CustomField>
    <fullName>InSHOP_Plumber_meet__c</fullName>
    <label>Inshop Plumber Meets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>