Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Inshop_Plumber_Meet_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Inshop_Plumber_Meet_ACHVD__c</fullName>
    <formula>Inshop_Plumber_Meets_Actual__c / InSHOP_Plumber_meet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inshop Plumber Meet % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>