Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Inshop_Plumber_Meet_Score__c.field-meta.xml
<CustomField>
    <fullName>Inshop_Plumber_Meet_Score__c</fullName>
    <formula>Inshop_Plumber_Meet_Weightage__c  *  (Inshop_Plumber_Meet_ACHVD__c  / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inshop Plumber Meet Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>