Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Inshop_Plumber_Meet_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Inshop_Plumber_Meet_Weightage__c</fullName>
    <label>Inshop Plumber Meet Weightage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>