Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/ISM_MEETS__c.field-meta.xml
<CustomField>
    <fullName>ISM_MEETS__c</fullName>
    <label>Ism Meets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>