Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/ISP_Meets_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>ISP_Meets_Plumbing__c</fullName>
    <formula>Naaka_Meet__c  +  Onsite_Plumber_Meet__c  +  InSHOP_Plumber_meet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISP Meets (Plumbing)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>