Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Jeep_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Jeep_Campaign__c</fullName>
    <label>Jeep Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>