Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Jeep_Campaign_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Jeep_Campaign_ACHVD__c</fullName>
    <formula>iF(Jeep_Campaign_Actual__c &gt; 0 &amp;&amp; Jeep_Campaign__c &gt; 0,  Jeep_Campaign_Actual__c /  Jeep_Campaign__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jeep Campaign % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>