Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Jeep_Campaign_Actual__c.field-meta.xml
<CustomField>
    <fullName>Jeep_Campaign_Actual__c</fullName>
    <label>Jeep Campaign (Actual)</label>
    <summarizedField>AP_Site_Visit__c.No_Of_Activities__c</summarizedField>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Activities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Othet_Activities__c</field>
        <operation>equals</operation>
        <value>Promotional Activity</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Promotion_Type__c</field>
        <operation>equals</operation>
        <value>Jeep Campaign</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>