Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Jeep_Campaign_Score__c.field-meta.xml
<CustomField>
    <fullName>Jeep_Campaign_Score__c</fullName>
    <formula>Jeep_Campaign_Weightage__c *  (Jeep_Campaign_ACHVD__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jeep Campaign Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>