Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Jeep_Campaign_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Jeep_Campaign_Weightage__c</fullName>
    <label>Jeep Campaign Weightage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>