Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Key_influencers_Arch_consultant_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Key_influencers_Arch_consultant_ACHVD__c</fullName>
    <formula>Key_influencers_contact_Arch_consultant__c /  Key_influencers_Target_Arch_consultant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key influencers (Arch/consultant) %ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>