Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Key_influencers_contact_Arch_consultant__c.field-meta.xml
<CustomField>
    <fullName>Key_influencers_contact_Arch_consultant__c</fullName>
    <label>Key influencers Actual ( Arch/consultant</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>equals</operation>
        <value>Architect, Consultant, Builder, Contractor, Engineer, Plumbing Contractor, Purchase Manager, Customer, Project Manager, Project Owner/Developer, Site Engineer, Site Incharge / Supervisor</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>