Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Key_influencers_Score_Arch_consultant__c.field-meta.xml
<CustomField>
    <fullName>Key_influencers_Score_Arch_consultant__c</fullName>
    <formula>Key_influencers_Weighta_Arch_consultant__c *  (Key_influencers_Arch_consultant_ACHVD__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key influencers Score( Arch/consultant)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>