Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Key_influencers_Weighta_Arch_consultant__c.field-meta.xml
<CustomField>
    <fullName>Key_influencers_Weighta_Arch_consultant__c</fullName>
    <label>Key influencers Weighta(Arch/consultant)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>