Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Leave_Actual__c.field-meta.xml
<CustomField>
    <fullName>Leave_Actual__c</fullName>
    <label>Leave_Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>