Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Market_type_of_owner__c.field-meta.xml
<CustomField>
    <fullName>Market_type_of_owner__c</fullName>
    <formula>TEXT(Owner:User.Market_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market type of owner</label>
    <type>Text</type>
</CustomField>