Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mechanics_Factory_Visit__c.field-meta.xml
<CustomField>
    <fullName>Mechanics_Factory_Visit__c</fullName>
    <label>Mechanics Factory Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>