Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mechanics_Winders_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Mechanics_Winders_Weightage__c</fullName>
    <label>Mechanics / Winders Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>