Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Borer_Meet__c.field-meta.xml
<CustomField>
    <fullName>Mega_Borer_Meet__c</fullName>
    <label>Mega Borer Meet</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>